--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mongodb": "^4.1.2",
     "mongoose": "^6.0.6",
     "multer": "^1.4.3",
+    "sharp": "^0.29.1",
     "validator": "^13.6.0"
   },
   "devDependencies": {
